--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.8.0",
